@@ -92,8 +92,14 @@ static struct argp_option cmdline_options[] =
      "Set SEL time.  Input format = \"MM/DD/YYYY - HH:MM:SS\" or \"now\".", 42},
     {"get-mca-auxiliary-log-status", CMD_GET_MCA_AUXILIARY_LOG_STATUS_KEY, NULL, 0,
      "Get machine check architecture (MCA) auxiliary log status information.", 43},
+    {"get-ssif-interface-capabilities", CMD_GET_SSIF_INTERFACE_CAPABILITIES_KEY, NULL, 0,
+     "Get SSIF interface capabilities.", 44},
+    {"get-kcs-interface-capabilities", CMD_GET_KCS_INTERFACE_CAPABILITIES_KEY, NULL, 0,
+     "Get KCS interface capabilities.", 45},
+    {"get-bt-interface-capabilities", CMD_GET_BT_INTERFACE_CAPABILITIES_KEY, NULL, 0,
+     "Get BT interface capabilities.", 46},
     {"verbose", VERBOSE_KEY, 0, 0,
-     "Increase verbosity in output.", 44},
+     "Increase verbosity in output.", 47},
     { 0 }
   };
 
@@ -213,6 +219,15 @@ cmdline_parse (int key, char *arg, struct argp_state *state)
     case CMD_GET_MCA_AUXILIARY_LOG_STATUS_KEY:
       cmd_args->get_mca_auxiliary_log_status = 1;
       break;
+    case CMD_GET_SSIF_INTERFACE_CAPABILITIES_KEY:
+      cmd_args->get_ssif_interface_capabilities = 1;
+      break;
+    case CMD_GET_KCS_INTERFACE_CAPABILITIES_KEY:
+      cmd_args->get_kcs_interface_capabilities = 1;
+      break;
+    case CMD_GET_BT_INTERFACE_CAPABILITIES_KEY:
+      cmd_args->get_bt_interface_capabilities = 1;
+      break;
     case VERBOSE_KEY:
       cmd_args->verbose++;
       break;
@@ -263,7 +278,10 @@ _bmc_device_args_validate (struct bmc_device_arguments *cmd_args)
       && !cmd_args->set_sdr_repository_time
       && !cmd_args->get_sel_time
       && !cmd_args->set_sel_time
-      && !cmd_args->get_mca_auxiliary_log_status)
+      && !cmd_args->get_mca_auxiliary_log_status
+      && !cmd_args->get_ssif_interface_capabilities
+      && !cmd_args->get_kcs_interface_capabilities
+      && !cmd_args->get_bt_interface_capabilities)
     {
       fprintf (stderr, 
                "No command specified.\n");
@@ -281,7 +299,10 @@ _bmc_device_args_validate (struct bmc_device_arguments *cmd_args)
        + cmd_args->set_sdr_repository_time
        + cmd_args->get_sel_time
        + cmd_args->set_sel_time
-       + cmd_args->get_mca_auxiliary_log_status) > 1)
+       + cmd_args->get_mca_auxiliary_log_status
+       + cmd_args->get_ssif_interface_capabilities
+       + cmd_args->get_kcs_interface_capabilities
+       + cmd_args->get_bt_interface_capabilities) > 1)
     {
       fprintf (stderr, 
                "Multiple commands specified.\n");
@@ -311,6 +332,9 @@ bmc_device_argp_parse (int argc, char **argv, struct bmc_device_arguments *cmd_a
   cmd_args->set_sel_time = 0;
   cmd_args->set_sel_time_arg = NULL;
   cmd_args->get_mca_auxiliary_log_status = 0;
+  cmd_args->get_ssif_interface_capabilities = 0;
+  cmd_args->get_kcs_interface_capabilities = 0;
+  cmd_args->get_bt_interface_capabilities = 0;
   cmd_args->verbose = 0;
 
   argp_parse (&cmdline_config_file_argp, argc, argv, ARGP_IN_ORDER, NULL, &(cmd_args->common));
