@@ -2,6 +2,9 @@
 
 	* libfreeipmi/: Support get system interface capabilities and get
 	bt interface capabilities commands, templates, and api calls.
+
+	* bmc-device/: Support --get-ssif-interface-capabilities,
+	--get-kcs-interface-capabilities, --get-bt-interface-capabilities.
 	
 2008-08-15 Albert Chu <chu11@llnl.gov>
 
